<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="Prefs">
		<EditTextPreference android:defaultValue="500"
			android:inputType="phone" android:key="connTimeout" android:title="@string/prompt_conn_timeout"
			android:summary="@string/prompt_conn_timeout_desc">
		</EditTextPreference>
		<CheckBoxPreference android:summaryOn="@string/prompt_wifionly_on"
			android:defaultValue="true" android:key="wifiOnly"
			android:summaryOff="@string/prompt_wifionly_off" android:title="@string/prompt_wifionly"
			android:summary="@string/prompt_wifionly_desc"></CheckBoxPreference>
		<EditTextPreference android:defaultValue="32"
			android:inputType="phone" android:key="numThreads" android:title="@string/prompt_num_threads"
			android:summary="@string/prompt_num_threads_desc">
		</EditTextPreference>
		<EditTextPreference
			android:defaultValue="21, 22, 23, 25, 53, 80, 110, 119, 143, 161, 389, 443, 445, 1433, 1521, 3306, 5900, 8080, 1604, 3389"
			android:key="defaultPortList" android:title="@string/prompt_defaultports">
		</EditTextPreference>
	</PreferenceCategory>
</PreferenceScreen>
